infra/k8s/fluffy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluffy
spec:
  type: NodePort
  selector:
    app: fluffy
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
