infra/k8s/synapse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
spec:
  type: NodePort
  selector:
    app: synapse
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30008
