infra/k8s/fluffy-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fluffy-route
spec:
  parentRefs:
    - name: gateway
      sectionName: https-fluffy
  hostnames:
    - "fluffy.nexojornal.com.br"
  rules:
    - backendRefs:
        - name: fluffy
          namespace: default
          port: 80
