infra/k8s/synapse-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse-route
spec:
  parentRefs:
    - name: gateway
      sectionName: https-synapse
  hostnames:
    - "synapse.nexojornal.com.br"
  rules:
    - backendRefs:
        - name: synapse
          namespace: default
          port: 3000
